--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "node",
             "request": "launch",
@@ -12,7 +13,7 @@
                 "<node_internals>/**"
             ],
             "console": "externalTerminal",
-            "program": "${workspaceFolder}\\Binary tree\\Construction\\construct-binary-tree-from-inorder-and-postorder-traversal.js"
+            "program": "${workspaceFolder}\\Leetcode weekly race\\20230219\\count-the-number-of-square-free-subsets.js"
         }
     ]
 }
